[project]
name = "ngo-explorer"
version = "1.0.0"
description = "Data tool to help international development NGOs to navigate charity commission data."
readme = "readme.md"
authors = [{ name = "David Kane", email = "david@dkane.net" }]
requires-python = ">=3.13"
dependencies = [
    "flask",
    "requests",
    "requests-cache",
    "Flask-Babel",
    "python-slugify",
    "plotly",
    "XlsxWriter",
    "graphqlclient",
    "gunicorn",
    "python-dotenv",
    "pytest",
    "requests-mock",
    "ruff",
    "psycopg[binary]",
    "sqlite_utils",
    "tqdm",
    "titlecase",
]
